# PA-3

./: FuncA.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb
.deps/: FuncA.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.1  output.2  requests  traces.2
deb/DEBIAN/: control
deb/usr/local/share/funca/: data.txt
deb/usr/local/share/man/man1/: FuncA.1
tests/: Funcatest1  Makefile  Makefile.am  main.cpp
tests/.deps/: main.Po
